# fedora-setup

./: .editorconfig  .gitattributes  .gitignore  Java.md  LICENSE  Makefile  README.md  ansible.cfg  install.sh  inventory.yaml  maven.md  pyproject.toml  quarkus.md  requirements.txt  setup.sh
.github/: CODEOWNERS  FUNDING.yml
.hooks/: pre-commit  pre-commit.sh
bash/: .bashrc  .bashrc-work  setup.sh
cursors/: setup.sh
dnf/: install.txt  remove.txt  setup.sh
docker/: README.md
docs/: Bluetooth_Device_Alias.md  Desktop_Files.md  Flatpak.md  Git.md  Git_config.md  IntelliJ_IDEA.md  Nvidia_CTK.md  Podman.md  Python_Environments.md  VS_Code.md  VirtualBox.md
eclipse/: README.md  Settings.md  eclipse.desktop
firefox/: README.md  singlefile-settings-2022-07-07T05_18_21.198Z.json  singlefile-settings.json
flatpak/: README.md  dump-installed.sh  dump-installed.txt  install.txt  setup.sh
fonts/: README.md  install.txt  remove.txt  setup.sh
git/: .gitconfig  .gitconfig-work  GitTut.md  README.md  gitconfig  setup.sh  ssh_config
gnome-terminal/: config-dump.sh  config-load.sh  dump-config.sh  keybindings.conf  profiles.conf  setup.sh
gnome-text-editor/: dump-config.sh  preferences.conf  setup.sh
google-chrome/: setup.sh
group_vars/: cleanup.yaml  container.yaml  customization.yaml  dev.yaml  java.yaml  media.yaml  server.yaml  tools.yaml  vscode_extensions.yaml  vscode_packages.yaml
heroku/: README.md
intellij-idea/: README.md
inventory/: hosts.yaml
jdk/: Java_Fix.txt
key-bindings/: dump-config.sh  mediakeys.conf  setup.sh  switchWindows.conf
(+279 files in other folders)
